Experimental (slow) GC - [replace me]
It must be replaced, but it will just sit here for now, because we can't
just have shit leak all over the place.

(it could even be bugged)

--- a/main.lpi
+++ b/main.lpi
@@ -35,6 +35,7 @@
           <Parsing>
             <SyntaxOptions>
               <IncludeAssertionCode Value="True"/>
+              <CPPInline Value="False"/>
             </SyntaxOptions>
           </Parsing>
           <CodeGeneration>
@@ -43,6 +44,7 @@
               <RangeChecks Value="True"/>
               <StackChecks Value="True"/>
             </Checks>
+            <VerifyObjMethodCallValidity Value="True"/>
             <TargetCPU Value="i386"/>
             <TargetOS Value="win32"/>
             <Optimizations>
